src/objects/PayrollTemp__c.object
<CustomObject>
    <fields>
        <fullName>ApprovedProfBillableHoursCNE__c</fullName>
        <label>ApprovedProfBillableHoursCNE</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ApprovedProfBillableHours__c</fullName>
        <label>Approved Prof Billable Hours</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ApprovedTWBillableHoursCNE__c</fullName>
        <label>ApprovedTWBillableHoursCNE</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ApprovedTWBillableHours__c</fullName>
        <label>Approved T/W Billable Hours</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CaseName__c</fullName>
        <label>Case Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CaseNumber__c</fullName>
        <label>Case Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DateSubmitted__c</fullName>
        <label>Date Submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EmployeeName__c</fullName>
        <label>Employee Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Employee</label>
        <referenceTo>SFDC_Employee__c</referenceTo>
        <relationshipLabel>PayrollTemp</relationshipLabel>
        <relationshipName>PayrollTemp</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HrNotes__c</fullName>
        <label>HR Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IsUserAdded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsUserAdded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>PayrollTemp</relationshipLabel>
        <relationshipName>PayrollTemp</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payrollid__c</fullName>
        <label>Payrollid</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReportNumber__c</fullName>
        <label>Report Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TotalCaseManagementBillableTime__c</fullName>
        <label>Total Case Management Billable Time</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UniqueKey__c</fullName>
        <description>generated for user added rows so they can be deleted</description>
        <label>UniqueKey</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>eDate__c</fullName>
        <description>field to reference in code for calender function</description>
        <label>eDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>sDate__c</fullName>
        <description>field to reference in code for calender function</description>
        <label>sDate</label>
        <type>Date</type>
    </fields>
    <label>PayrollTemp</label>
    <nameField>
        <displayFormat>p-{0000000}</displayFormat>
        <label>Auto Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PayrollTemp</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>